# pyRegRep

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-security-quality.yml  code_quality.yml  python-publish.yml
example/: Example_1.py  example_anyvaluetype_usage.py  example_get_slot_usage.py
pyRegRep4/: NS.py  RIMElement.py  RIMParsing.py  __init__.py  utils.py
tests/: EDM_Ferst_Request.xml  EDM_Ferst_Response.xml  EDM_Second_Request.xml  EDM_Second_Response.xml  conftest.py  test_get_slot_simple.py  test_parsing_1.py  test_rim_element.py  test_rim_parsing.py  test_utils.py
