[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyRegRep"
version = "11"
description = "Your package description"
authors = [{ name="Andrey Shapovalov" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"lxml>=5.2.1",
	"xmltodict>=0.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
