[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyRegRep"
version = "13"
description = "Бібліотека для роботи з реєстрами та репозитаріями в Україні"
authors = [
    { name = "Andrii Shapovalov", email = "mt.andrey@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "lxml>=5.2.1",
    "xmltodict>=0.13.0",
]
keywords = ["registry", "repositories", "ukraine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/AndreyShapovalovVN/pyRegRep"
Repository = "https://github.com/AndreyShapovalovVN/pyRegRep.git"
Issues = "https://github.com/AndreyShapovalovVN/pyRegRep/issues"

[tool.setuptools]
packages = ["pyRegRep4"]
include-package-data = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["pyRegRep4"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[dependency-groups]
dev = []
